[tool.poetry]
name = "get-coords-de"
version = "0.1.0"
description = ""
authors = ["RR <the.most.successful.investor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
